# traffic-inspector-ui

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  afpacket.c  afpacket.h  collector_client.h  docker-compose.yml  main.c  ndpi_workflow.c  ndpi_workflow.h
.github/codeql/: frontend-config.yaml
.github/workflows/: c.yaml  codeql.yaml  go.yaml  openapi.yaml  python.yaml  ui.yaml
api/: .gitignore  Dockerfile  go.mod  go.sum  main.go
api/controllers/: flow.go
api/db/: db.go
api/models/: flow.go
api/routes/: flow.go
api/schema/: openapi.yaml
api/schema/components/parameters/: dashboard.yaml
api/schema/paths/dashboard/: layout.yaml  widget-add.yaml  widget-delete.yaml
api/schema/paths/flows/: all.yaml  get-by-id.yaml
api/schema/paths/statistics/: flows.yaml
api/schema/paths/widget/: create.yaml  delete.yaml  update-config.yaml  update-name.yaml
collector/: go.mod  go.sum  main.go
db/: flow_info.sql
src/core/: collector_client.c  collector_client.h  config.c  config.h  dpi_worker.c  dpi_worker.h  main.c  ndpi_workflow.c  ndpi_workflow.h  utils.c  utils.h  zmq_log.c  zmq_log.h
ui/: .gitignore  .prettierrc  Dockerfile  docker-start.sh  eslint.config.mjs  nginx.conf  package-lock.json  package.json  redocly.yaml  tsconfig.json
ui-spa/: .prettierrc  package-lock.json  tsconfig.json
ui-spa/build-scripts/: build.js
ui-spa/src/: index.tsx
ui-spa/src/pages/: flows.tsx
ui-spa/src/shared/helpers/: style.ts
ui-spa/static/: index.dev.html
ui/assets/styles/: reset.css
ui/build-scripts/: build-plugins.js  build.js  dev.js  serve.js
ui/build-scripts/internal/: args.js  logger.js  misc.js  plugins.js
ui/build-templates/: index.dev.html  index.prod.html
ui/declarations/: ky.d.ts  mui.d.ts
ui/src/: index.css  index.tsx
ui/src/app/: layout.tsx
ui/src/app/flows/: page.tsx
ui/src/components/: DnsDetails.tsx  FlowDetails.tsx  FlowsTable.tsx  ProtocolAnalysis.tsx  TlsDetails.tsx  TrafficRatioBar.tsx  common.tsx
ui/src/consts/: index.tsx
ui/src/features/: index.ts
ui/src/features/closed/: index.ts
ui/src/features/open/: index.ts
ui/src/layout/: theme.ts
ui/src/layout/navbar/: index.tsx  styles.module.css
ui/src/layout/page/: index.tsx  styles.module.css
ui/src/pages/: dashboard.css  dashboard.tsx  deprecated__flow-info.tsx  flow-info.tsx  flows.tsx
ui/src/pages/dashboard/: index.tsx  styles.module.css
ui/src/pages/flows/: index.tsx
ui/src/pages/statistics/: index.tsx
ui/src/services/: api.ts  index.ts
ui/src/shared/: index.ts
ui/src/shared/helpers/: clsx.ts  data.ts  index.ts  style.ts  types.ts
ui/src/shared/hooks/: index.ts  (+2 more)
ui/src/types/: index.ts
ui/src/utils/: index.tsx
ui/static/: 404.html  index.dev.html  index.prod.html  tsconfig.tsbuildinfo
(+112 files in other folders)
